RESOLVED FIXED 288735
[WebGPU] Ensure staticThreadgroupMemoryLength does not exceed device capabilities
https://bugs.webkit.org/show_bug.cgi?id=288735
Summary [WebGPU] Ensure staticThreadgroupMemoryLength does not exceed device capabili...
Mike Wyrzykowski
Reported 2025-02-27 11:39:04 PST
[WebGPU] Ensure staticThreadgroupMemoryLength does not exceed device capabilities
Attachments
Mike Wyrzykowski
Comment 1 2025-02-27 11:44:22 PST
Mike Wyrzykowski
Comment 2 2025-02-27 11:46:33 PST
Alexey Proskuryakov
Comment 3 2025-02-27 18:50:43 PST
*** Bug 288734 has been marked as a duplicate of this bug. ***
Tadeu Zagallo
Comment 4 2025-03-03 10:22:03 PST
EWS
Comment 5 2025-03-04 04:01:57 PST
Committed 291558@main (75f68af5e660): <https://commits.webkit.org/291558@main> Reviewed commits have been landed. Closing PR #41779 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.