[WebGPU] Ensure staticThreadgroupMemoryLength does not exceed device capabilities https://bugs.webkit.org/show_bug.cgi?id=288735 rdar://145583179

Reviewed by NOBODY (OOPS!).

It is illegal to use a compute pipeline which exceeds the device's capabilties,
since we don't have offline compilation targeting different devices we should
assume the pipeline is invalid in this case.

* LayoutTests/fast/webgpu/nocrash/fuzz-288735-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-288735.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/ComputePipeline.mm:
(WebGPU::createComputePipelineState):